--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,7 @@
         "node": true
     },
     "extends": "eslint:recommended",
-    "overrides": [
-    ],
+    "overrides": [],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
