--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "^8.30.0"
   },
   "dependencies": {
+    "@ltd/j-toml": "^1.36.0",
     "chalk": "^5.2.0",
     "inquirer": "^9.1.4"
   }
