New example data

--- a/subjects/english/grammar/irregular_verbs.toml
+++ b/subjects/english/grammar/irregular_verbs.toml
@@ -1,1 +1,176 @@
-title = "Irregular Verbs"
+"to be" = "was/were, been"
+"to awake" = "awoke, awoken"
+"to bear" = "bore, born"
+"to beat" = "beat, beat"
+"to become" = "became, become"
+"to begin" = "began, begun"
+"to bend" = "bent, bent"
+"to beset" = "beset, beset"
+"to bet" = "bet, bet"
+"to bid" = "bid, bid"
+"to bind" = "bound, bound"
+"to bite" = "bit, bitten"
+"to bleed" = "bled, bled"
+"to blow" = "blew, blown"
+"to break" = "broke, broken"
+"to breed" = "bred, bred"
+"to bring" = "brought, brought"
+"to broadcast" = "broadcast, broadcast"
+"to build" = "built, built"
+"to burn" = "burnt, burnt"
+"to burst" = "burst, burst"
+"to buy" = "bought, bought"
+"to cast" = "cast, cast"
+"to catch" = "caught, caught"
+"to choose" = "chose, chosen"
+"to cling" = "clung, clung"
+"to come" = "came, come"
+"to cost" = "cost, cost"
+"to creep" = "crept, crept"
+"to cut" = "cut, cut"
+"to deal" = "dealt, dealt"
+"to dig" = "dug, dug"
+"to dive" = "dove, dived"
+"to do" = "did, done"
+"to draw" = "drew, drawn"
+"to dream" = "dreamt, dreamt"
+"to drive" = "drove, driven"
+"to drink" = "drank, drunk"
+"to eat" = "ate, eaten"
+"to fall" = "fell, fallen"
+"to feed" = "fed, fed"
+"to feel" = "felt, felt"
+"to fight" = "fought, fought"
+"to find" = "found, found"
+"to fit" = "fit, fit"
+"to flee" = "fled, fled"
+"to fling" = "flung, flung"
+"to fly" = "flew, flown"
+"to forbid" = "forbade, forbidden"
+"to forget" = "forgot, forgotten"
+"to forego" = "forewent, foregone"
+"to forgo" = "forewent, foregone"
+"to forgive" = "forgave, forgiven"
+"to forsake" = "forsook, forsaken"
+"to freeze" = "froze, frozen"
+"to get" = "got, gotten"
+"to give" = "gave, given"
+"to go" = "went, gone"
+"to grind" = "ground, ground"
+"to grow" = "grew, grown"
+"to hang" = "hung, hung"
+"to hear" = "heard, heard"
+"to hide" = "hid, hidden"
+"to hit" = "hit, hit"
+"to hold" = "held, held"
+"to hurt" = "hurt, hurt"
+"to is" = "was, were"
+"to keep" = "kept, kept"
+"to kneel" = "knelt, knelt"
+"to knit" = "knit, knit"
+"to know" = "knew, know"
+"to lay" = "laid, laid"
+"to lead" = "led, led"
+"to leap" = "lept, lept"
+"to learn" = "learned, learned"
+"to leave" = "left, left"
+"to lend" = "lent, lent"
+"to let" = "let, let"
+"to lie" = "lay, lain"
+"to light" = "lit, lighted"
+"to lose" = "lost, lost"
+"to make" = "made, made"
+"to mean" = "meant, meant"
+"to meet" = "met, met"
+"to misspell" = "misspelt, misspelt"
+"to mistake" = "mistook, mistaken"
+"to mow" = "mowed, mowed"
+"to overcome" = "overcame, overcome"
+"to overdo" = "overdid, overdone"
+"to overtake" = "overtook, overtaken"
+"to overthrow" = "overthrew, overthrown"
+"to pay" = "paid, paid"
+"to plead" = "pled, pled"
+"to prove" = "proved, proved"
+"to put" = "put, put"
+"to quit" = "quit, quit"
+"to read" = "read, read"
+"to rid" = "rid, rid"
+"to ride" = "rode, ridden"
+"to ring" = "rang, rung"
+"to rise" = "rose, risen"
+"to run" = "ran, run"
+"to saw" = "sawed, sawn"
+"to say" = "said, said"
+"to see" = "saw, seen"
+"to seek" = "sought, sought"
+"to sell" = "sold, sold"
+"to send" = "sent, sent"
+"to set" = "set, set"
+"to sew" = "sewed, sewn"
+"to shake" = "shook, shaken"
+"to shave" = "shaved, shaven"
+"to shear" = "shore, shorn"
+"to shed" = "shed, shed"
+"to shine" = "shone, shone"
+"to shoe" = "shoed, shod"
+"to shoot" = "shot, shot"
+"to show" = "showed, shown"
+"to shrink" = "shrank, shrunk"
+"to shut" = "shut, shut"
+"to sing" = "sang, sung"
+"to sink" = "sank, sunk"
+"to sit" = "sat, sat"
+"to sleep" = "slept, slept"
+"to slay" = "slew, slain"
+"to slide" = "slid, slid"
+"to sling" = "slung, slung"
+"to slit" = "slit, slit"
+"to smite" = "smote, smitten"
+"to sow" = "sowed, sown"
+"to speak" = "spoke, spoken"
+"to speed" = "sped, sped"
+"to spend" = "spent, spent"
+"to spill" = "spilled, spilled"
+"to spin" = "spun, spun"
+"to spit" = "spat, spit"
+"to split" = "split, split"
+"to spread" = "spread, spread"
+"to spring" = "sprang, sprung"
+"to stand" = "stood, stood"
+"to steal" = "stole, stolen"
+"to stick" = "stuck, stuck"
+"to sting" = "stung, stung"
+"to stink" = "stank, stunk"
+"to stride" = "strod, stridden"
+"to strike" = "struck, struck"
+"to string" = "strung, strung"
+"to strive" = "strove, striven"
+"to swear" = "swore, sworn"
+"to sweep" = "swept, swept"
+"to swell" = "swelled, swollen"
+"to swim" = "swam, swum"
+"to swing" = "swung, swung"
+"to take" = "took, taken"
+"to teach" = "taught, taught"
+"to tear" = "tore, torn"
+"to tell" = "told, told"
+"to think" = "thought, thought"
+"to thrive" = "thrived, thrived"
+"to throw" = "threw, thrown"
+"to thrust" = "thrust, thrust"
+"to tread" = "trod, trodden"
+"to understand" = "understood, understood"
+"to uphold" = "upheld, upheld"
+"to upset" = "upset, upset"
+"to wake" = "woke, woken"
+"to wear" = "wore, worn"
+"to weave" = "wove, woven"
+"to wed" = "wed, wed"
+"to weep" = "wept, wept"
+"to wind" = "wound, wound"
+"to win" = "won, won"
+"to withhold" = "withheld, withheld"
+"to withstand" = "withstood, withstood"
+"to wring" = "wrung, wrung"
+"to write" = "wrote, written"
