--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "eslint": "^8.30.0"
   },
   "dependencies": {
-    "@ltd/j-toml": "^1.36.0",
+    "@ltd/j-toml": "^1.37.0",
     "chalk": "^5.2.0",
-    "inquirer": "^9.1.4"
+    "inquirer": "^9.1.4",
+    "inquirer-file-tree-selection-prompt": "^2.0.5"
   }
 }
